Keep details modal

--- a/keeper.client/index.html
+++ b/keeper.client/index.html
@@ -13,6 +13,12 @@
       crossorigin="anonymous"
       defer
     ></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter&family=Marko+One&display=swap"
+      rel="stylesheet"
+    />
     <title>keeper.client</title>
   </head>
 
